--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,40 @@
 {
-  "extends": "airbnb",
-  "rules": {
-    "indent": ["error", 4, {"SwitchCase": 1}],
-    "max-len": ["error", 120],
-    "import/no-unresolved": "off"
-  },
   "env": {
-    "node": true
+    "es6": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": { },
+  },
+  "rules": {
+    "no-cond-assign": 2,
+    "no-var": 0,
+    "prefer-const": 0,
+    "no-extra-parens": 0,
+    "no-dupe-keys": 2,
+    "no-unreachable": 2,
+    "eqeqeq": 1,
+    "keyword-spacing": 0,
+    "no-native-reassign": 2,
+    "no-redeclare": 2,
+    "radix": 1,
+    "indent": 0,
+    "quotes": [
+      0,
+      "single",
+      "avoid-escape"
+    ],
+    "no-shadow": 2,
+    "no-unused-vars": 1,
+    "no-lonely-if": 1,
+    "no-use-before-define": 2,
+    "no-bitwise": 2,
+    "no-dupe-class-members": 2,
+    "guard-for-in": 1,
+    "consistent-return": 2,
+    "no-octal-escape": 2,
+    "no-constant-condition": 1,
+    "no-unused-expressions": 2
   }
 }
