rename to tap-dancer

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tap-dance",
+  "name": "tap-dancer",
   "version": "0.0.1",
   "description": "a quick human-readable TAP test-reporter",
   "keywords": [
