--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tap-dancer",
-  "version": "0.1.1",
-  "description": "a quick human-readable TAP test-reporter",
+  "version": "0.1.2",
+  "description": "a quick human-readable test-reporter for Tap",
   "keywords": [
     "reporter",
     "tap",
@@ -23,7 +23,8 @@
   },
   "scripts": {
     "test": "exit 0",
-    "build": "./node_modules/.bin/babel ./src/index.js -o ./builds/tap-dance.js"
+    "build": "./node_modules/.bin/babel ./src/index.js -o ./builds/tap-dance.js",
+    "watch": "tape ~/mountain/nlp-compromise/test/unit/**/*.test.js | ./src/index.js"
   },
   "dependencies": {
     "chalk": "2.4.1",
@@ -34,6 +35,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-minify": "^0.5.0",
+    "shelljs": "^0.8.2",
     "tape": "4.9.1"
   }
 }
