--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tap-dancer",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "a quick human-readable test-reporter for Tap",
   "keywords": [
     "reporter",
@@ -23,19 +23,11 @@
   },
   "scripts": {
     "test": "exit 0",
-    "build": "./node_modules/.bin/babel ./src/index.js -o ./builds/tap-dance.js",
     "watch": "tape ~/mountain/nlp-compromise/test/unit/**/*.test.js | ./src/index.js"
   },
   "dependencies": {
-    "chalk": "2.4.1",
-    "stacktrace-parser": "0.1.4",
+    "chalk": "2.4.2",
     "tap-out": "3.0.0"
   },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-minify": "^0.5.0",
-    "shelljs": "^0.8.2",
-    "tape": "4.9.1"
-  }
+  "devDependencies": {}
 }
